Bootstrap Based Website

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <ul class="nav navbar-nav">
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#service">Notebooks</a></li>
+          <li><a href="#service">Notedecks</a></li>
           <li><a href="#contact">Contact</a></li>
           <!--
           <li class="dropdown">
@@ -73,7 +73,7 @@
   <section id="intro" class="intro">
 
     <div class="slogan">
-      <h2>WELCOME TO <span class="text_color">TITANNOTES</span> </h2>
+      <h2>WELCOME TO <span class="text_color">TitanNotes</span> </h2>
       <h4>INTERACTIVE, REAL-TIME, COLLABORATIVE NOTE TAKING</h4>
     </div>
     <div class="page-scroll">
@@ -173,7 +173,7 @@
           <div class="col-lg-8 col-lg-offset-2">
             <div class="wow bounceInDown" data-wow-delay="0.4s">
               <div class="section-heading">
-                <h2>Notebooks</h2>
+                <h2>Notedecks</h2>
                 <i class="fa fa-2x fa-angle-down"></i>
 
               </div>
@@ -336,12 +336,27 @@
 				  <a href="mailto:#">email.name@example.com</a>
 				</address>
             <address>
-				  <strong>We're on social networks</strong><br>
+				  <strong>Get TitanNotes</strong><br>
+                        <div>
+                          <a href="https://itunes.apple.com/us/app/titan-notes/id1401809122?mt=8" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg) no-repeat;width:135px;height:40px;background-size:contain;"></a>
+                        </div>
+                        <div>
+                          <a href='https://play.google.com/store/apps/details?id=io.titansoftware.titannotes&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' style="width:147px"/></a>
+                        </div>
+                        <!--
                        	<ul class="company-social">
+                            <li class="Apple AppStore">
+                              <a href="https://itunes.apple.com/us/app/titan-notes/id1401809122?mt=8" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg) no-repeat;width:135px;height:40px;background-size:contain;"></a>
+                            </li>
+                            <li class="Google AppStore">
+                              <a href='https://play.google.com/store/apps/details?id=io.titansoftware.titannotes&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' style="width:150px"/></a>
+                            </li>
+
                             <li class="social-facebook"><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
                             <li class="social-twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
                             <li class="social-dribble"><a href="#" target="_blank"><i class="fa fa-dribbble"></i></a></li>
                             <li class="social-google"><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                          -->
                         </ul>
 				</address>
 
