--- a/index.html
+++ b/index.html
@@ -25,7 +25,21 @@
     Author: BootstrapMade
     Author URL: https://bootstrapmade.com
   ======================================================= -->
+  <style>
+  * {
+      box-sizing: border-box;
+  }
 
+  .row {
+      display: flex;
+  }
+
+  /* Create three equal columns that sits next to each other */
+  .column {
+      flex: 50.00%;
+      padding: 5px;
+  }
+  </style>
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
@@ -50,7 +64,7 @@
         <ul class="nav navbar-nav">
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#service">Notedecks</a></li>
+          <li><a href="#service">Decks</a></li>
           <li><a href="#contact">Contact</a></li>
           <!--
           <li class="dropdown">
@@ -173,7 +187,7 @@
           <div class="col-lg-8 col-lg-offset-2">
             <div class="wow bounceInDown" data-wow-delay="0.4s">
               <div class="section-heading">
-                <h2>Notedecks</h2>
+                <h2>Decks</h2>
                 <i class="fa fa-2x fa-angle-down"></i>
 
               </div>
@@ -197,7 +211,7 @@
               </div>
               <div class="service-desc">
                 <h5>Nutrition</h5>
-                <p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+                <!--<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>-->
               </div>
             </div>
           </div>
@@ -210,7 +224,7 @@
               </div>
               <div class="service-desc">
                 <h5>Supplements</h5>
-                <p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+                <!--<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>-->
               </div>
             </div>
           </div>
@@ -223,7 +237,7 @@
               </div>
               <div class="service-desc">
                 <h5>Exercise and Sports</h5>
-                <p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+                <!--<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>-->
               </div>
             </div>
           </div>
@@ -236,7 +250,7 @@
               </div>
               <div class="service-desc">
                 <h5>Stress Management</h5>
-                <p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+                <!--<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>-->
               </div>
             </div>
           </div>
@@ -251,6 +265,7 @@
 
   <!-- Section: contact -->
   <section id="contact" class="home-section text-center">
+    <!--
     <div class="heading-contact">
       <div class="container">
         <div class="row">
@@ -267,7 +282,7 @@
       </div>
     </div>
     <div class="container">
-
+    -->
       <div class="row">
         <div class="col-lg-2 col-lg-offset-5">
           <hr class="marginbot-50">
@@ -322,6 +337,7 @@
 
         <div class="col-lg-4">
           <div class="widget-contact">
+            <!--
             <h5>Main Office</h5>
 
             <address>
@@ -336,13 +352,16 @@
 				  <a href="mailto:#">email.name@example.com</a>
 				</address>
             <address>
-				  <strong>Get TitanNotes</strong><br>
-                        <div>
+            -->
+				  <h5>Get TitanNotes</h5>
+
+                        <div class="column">
                           <a href="https://itunes.apple.com/us/app/titan-notes/id1401809122?mt=8" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg) no-repeat;width:135px;height:40px;background-size:contain;"></a>
                         </div>
-                        <div>
-                          <a href='https://play.google.com/store/apps/details?id=io.titansoftware.titannotes&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' style="width:147px"/></a>
+                        <div >
+                          <a href='https://play.google.com/store/apps/details?id=io.titansoftware.titannotes&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' style="width:150px"/></a>
                         </div>
+
                         <!--
                        	<ul class="company-social">
                             <li class="Apple AppStore">
