Bootstrap Based Website

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#service">Decks</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact">Get TitanNotes</a></li>
           <!--
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
@@ -283,6 +283,7 @@
     </div>
     <div class="container">
     -->
+    <!--
       <div class="row">
         <div class="col-lg-2 col-lg-offset-5">
           <hr class="marginbot-50">
@@ -334,7 +335,7 @@
             </form>
           </div>
         </div>
-
+-->
         <div class="col-lg-4">
           <div class="widget-contact">
             <!--
@@ -353,7 +354,7 @@
 				</address>
             <address>
             -->
-				  <h5>Get TitanNotes</h5>
+				  <h1>Get TitanNotes</h1>
 
                         <div class="column">
                           <a href="https://itunes.apple.com/us/app/titan-notes/id1401809122?mt=8" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg) no-repeat;width:135px;height:40px;background-size:contain;"></a>
