--- a/index.html
+++ b/index.html
@@ -25,21 +25,7 @@
     Author: BootstrapMade
     Author URL: https://bootstrapmade.com
   ======================================================= -->
-  <style>
-  * {
-      box-sizing: border-box;
-  }
 
-  .row {
-      display: flex;
-  }
-
-  /* Create three equal columns that sits next to each other */
-  .column {
-      flex: 50.00%;
-      padding: 5px;
-  }
-  </style>
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
@@ -203,7 +189,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-sm-3">
           <div class="wow fadeInLeft" data-wow-delay="0.2s">
             <div class="service-box">
               <div class="service-icon">
@@ -216,7 +202,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-sm-3">
           <div class="wow fadeInUp" data-wow-delay="0.2s">
             <div class="service-box">
               <div class="service-icon">
@@ -229,7 +215,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-sm-3">
           <div class="wow fadeInUp" data-wow-delay="0.2s">
             <div class="service-box">
               <div class="service-icon">
@@ -242,7 +228,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-sm-3">
           <div class="wow fadeInRight" data-wow-delay="0.2s">
             <div class="service-box">
               <div class="service-icon">
