--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#service">Decks</a></li>
-          <li><a href="#contact">Get TitanNotes</a></li>
+          <li><a href="#contact">Get</a></li>
           <!--
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
@@ -340,12 +340,12 @@
 				</address>
             <address>
             -->
-				  <h1>Get TitanNotes</h1>
+				  <h1>Get</h1>
 
-                        <div class="column">
+                        <div class="service-icon">
                           <a href="https://itunes.apple.com/us/app/titan-notes/id1401809122?mt=8" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg) no-repeat;width:135px;height:40px;background-size:contain;"></a>
                         </div>
-                        <div >
+                        <div class="service-icon">
                           <a href='https://play.google.com/store/apps/details?id=io.titansoftware.titannotes&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' style="width:150px"/></a>
                         </div>
 
