--- a/SquadFree/Squadfree/index.html
+++ b/SquadFree/Squadfree/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>TitanNotes - Electronic Note Taking</title>
+  <title>Squadfree - Free bootstrap 3 one page template</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -41,7 +41,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
         <a class="navbar-brand" href="index.html">
-          <h1>TITAN SOFTWARE LLC</h1>
+          <h1>SQUAD FREE</h1>
         </a>
       </div>
 
@@ -50,9 +50,8 @@
         <ul class="nav navbar-nav">
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#service">Decks</a></li>
-          <li><a href="#contact">Get</a></li>
-          <!--
+          <li><a href="#service">Service</a></li>
+          <li><a href="#contact">Contact</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -61,7 +60,6 @@
               <li><a href="#">Example menu</a></li>
             </ul>
           </li>
-        -->
         </ul>
       </div>
       <!-- /.navbar-collapse -->
@@ -73,8 +71,8 @@
   <section id="intro" class="intro">
 
     <div class="slogan">
-      <h2>WELCOME TO <span class="text_color">TitanNotes</span> </h2>
-      <h4>INTERACTIVE, REAL-TIME, COLLABORATIVE NOTE TAKING</h4>
+      <h2>WELCOME TO <span class="text_color">SQUAD</span> </h2>
+      <h4>WE ARE GROUP OF GENTLEMEN MAKING AWESOME WEB WITH BOOTSTRAP</h4>
     </div>
     <div class="page-scroll">
       <a href="#service" class="btn btn-circle">
@@ -92,7 +90,7 @@
           <div class="col-lg-8 col-lg-offset-2">
             <div class="wow bounceInDown" data-wow-delay="0.4s">
               <div class="section-heading">
-                <h2>About TitanNotes</h2>
+                <h2>About us</h2>
                 <i class="fa fa-2x fa-angle-down"></i>
 
               </div>
@@ -101,7 +99,6 @@
         </div>
       </div>
     </div>
-  <!--
     <div class="container">
 
       <div class="row">
@@ -159,7 +156,6 @@
         </div>
       </div>
     </div>
-  -->
   </section>
   <!-- /Section: about -->
 
@@ -173,7 +169,7 @@
           <div class="col-lg-8 col-lg-offset-2">
             <div class="wow bounceInDown" data-wow-delay="0.4s">
               <div class="section-heading">
-                <h2>Decks</h2>
+                <h2>Our Services</h2>
                 <i class="fa fa-2x fa-angle-down"></i>
 
               </div>
@@ -189,54 +185,54 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-3">
+        <div class="col-md-3">
           <div class="wow fadeInLeft" data-wow-delay="0.2s">
             <div class="service-box">
               <div class="service-icon">
                 <img src="img/icons/service-icon-1.png" alt="" />
               </div>
               <div class="service-desc">
-                <h5>Nutrition</h5>
-                <!--<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>-->
+                <h5>Print</h5>
+                <p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-sm-3">
+        <div class="col-md-3">
           <div class="wow fadeInUp" data-wow-delay="0.2s">
             <div class="service-box">
               <div class="service-icon">
                 <img src="img/icons/service-icon-2.png" alt="" />
               </div>
               <div class="service-desc">
-                <h5>Supplements</h5>
-                <!--<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>-->
+                <h5>Web Design</h5>
+                <p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-sm-3">
+        <div class="col-md-3">
           <div class="wow fadeInUp" data-wow-delay="0.2s">
             <div class="service-box">
               <div class="service-icon">
                 <img src="img/icons/service-icon-3.png" alt="" />
               </div>
               <div class="service-desc">
-                <h5>Exercise and Sports</h5>
-                <!--<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>-->
+                <h5>Photography</h5>
+                <p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-sm-3">
+        <div class="col-md-3">
           <div class="wow fadeInRight" data-wow-delay="0.2s">
             <div class="service-box">
               <div class="service-icon">
                 <img src="img/icons/service-icon-4.png" alt="" />
               </div>
               <div class="service-desc">
-                <h5>Stress Management</h5>
-                <!--<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>-->
+                <h5>Cloud System</h5>
+                <p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
               </div>
             </div>
           </div>
@@ -249,138 +245,109 @@
 
 
 
-<!--
+  <!-- Section: contact -->
+  <section id="contact" class="home-section text-center">
+    <div class="heading-contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2">
+            <div class="wow bounceInDown" data-wow-delay="0.4s">
+              <div class="section-heading">
+                <h2>Get in touch</h2>
+                <i class="fa fa-2x fa-angle-down"></i>
 
-                        <div >
-                          <a href="https://itunes.apple.com/us/app/titan-notes/id1401809122?mt=8" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg) no-repeat;width:135px;height:40px;background-size:contain;"></a>
-                        </div>
-                        <div >
-                          <a href='https://play.google.com/store/apps/details?id=io.titansoftware.titannotes&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' style="width:150px"/></a>
-                        </div>
-
--->
-
-<!-- Section: contact -->
-
-<section id="contact" class="home-section text-center">
-  <div class="heading-contact">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
-          <div class="wow bounceInDown" data-wow-delay="0.4s">
-            <div class="section-heading">
-              <h2>Get in touch</h2>
-              <i class="fa fa-2x fa-angle-down"></i>
-
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="container">
+    <div class="container">
 
-    <div class="row">
-      <div class="col-lg-2 col-lg-offset-5">
-        <hr class="marginbot-50">
+      <div class="row">
+        <div class="col-lg-2 col-lg-offset-5">
+          <hr class="marginbot-50">
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-8">
-        <div class="boxed-grey">
+      <div class="row">
+        <div class="col-lg-8">
+          <div class="boxed-grey">
 
-          <div id="sendmessage">Your message has been sent. Thank you!</div>
-          <div id="errormessage"></div>
-          <form id="contact-form" action="" method="post" role="form" class="contactForm">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label for="name">
-                              Name</label>
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                  <div class="validation"></div>
-                </div>
-                <div class="form-group">
-                  <label for="email">
-                              Email Address</label>
+            <div id="sendmessage">Your message has been sent. Thank you!</div>
+            <div id="errormessage"></div>
+            <form id="contact-form" action="" method="post" role="form" class="contactForm">
+              <div class="row">
+                <div class="col-md-6">
                   <div class="form-group">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                    <label for="name">
+                                Name</label>
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                    <div class="validation"></div>
+                  </div>
+                  <div class="form-group">
+                    <label for="email">
+                                Email Address</label>
+                    <div class="form-group">
+                      <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                      <div class="validation"></div>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="subject">
+                                Subject</label>
+                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
                     <div class="validation"></div>
                   </div>
                 </div>
-                <div class="form-group">
-                  <label for="subject">
-                              Subject</label>
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                  <div class="validation"></div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="name">
+                                Message</label>
+                    <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                    <div class="validation"></div>
+                  </div>
+                </div>
+                <div class="col-md-12">
+                  <button type="submit" class="btn btn-skin pull-right" id="btnContactUs">
+                            Send Message</button>
                 </div>
               </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label for="name">
-                              Message</label>
-                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                  <div class="validation"></div>
-                </div>
-              </div>
-              <div class="col-md-12">
-                <button type="submit" class="btn btn-skin pull-right" id="btnContactUs">
-                          Send Message</button>
-              </div>
-            </div>
-          </form>
+            </form>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="widget-contact">
+            <h5>Main Office</h5>
+
+            <address>
+				  <strong>Squas Design, Inc.</strong><br>
+				  Tower 795 Folsom Ave, Beautiful Suite 600<br>
+				  San Francisco, CA 94107<br>
+				  <abbr title="Phone">P:</abbr> (123) 456-7890
+				</address>
+
+            <address>
+				  <strong>Email</strong><br>
+				  <a href="mailto:#">email.name@example.com</a>
+				</address>
+            <address>
+				  <strong>We're on social networks</strong><br>
+                       	<ul class="company-social">
+                            <li class="social-facebook"><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                            <li class="social-twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                            <li class="social-dribble"><a href="#" target="_blank"><i class="fa fa-dribbble"></i></a></li>
+                            <li class="social-google"><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                        </ul>
+				</address>
+
+          </div>
         </div>
       </div>
-<!--
-      <div class="col-lg-4">
-        <div class="widget-contact">
-          <h5>Main Office</h5>
 
-          <address>
-        <strong>Squas Design, Inc.</strong><br>
-        Tower 795 Folsom Ave, Beautiful Suite 600<br>
-        San Francisco, CA 94107<br>
-        <abbr title="Phone">P:</abbr> (123) 456-7890
-      </address>
-
-          <address>
-        <strong>Email</strong><br>
-        <a href="mailto:#">email.name@example.com</a>
-      </address>
-          <address>
--->
-        <h2>GET TITANNOTES</h2><br>
-
-                         <!--
-                          <li class="social-facebook"><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                          <li class="social-twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                          <li class="social-dribble"><a href="#" target="_blank"><i class="fa fa-dribbble"></i></a></li>
-                          <li class="social-google"><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
-                        -->
-                           <div>
-                             <a href='https://play.google.com/store/apps/details?id=io.titansoftware.titannotes&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
-                               <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Get_it_on_Google_play.svg/1280px-Get_it_on_Google_play.svg.png" style="width:150px" >
-                             <!--<i class="fa fa-android"></i>-->
-                             </a>
-                          </div>
-                          <div>
-                            <p></p>
-                          </div>
-                          <div>
-                            <a href= "https://itunes.apple.com/us/app/titan-notes/id1401809122?mt=8">
-                              <img src="https://upload.wikimedia.org/wikipedia/commons/5/5d/Available_on_the_App_Store_%28black%29.png" style="width:150px" >
-                              <!--<i class="fa fa-apple"></i>-->
-                            </a>
-                          </div>
-
-      </address>
-
-        </div>
-      </div>
     </div>
-
-  </div>
-</section>
+  </section>
+  <!-- /Section: contact -->
 
   <footer>
     <div class="container">
@@ -393,15 +360,15 @@
 						</a>
             </div>
           </div>
-          <p>&copy;Titan Software LLC. All rights reserved.</p>
+          <p>&copy;SquadFREE. All rights reserved.</p>
           <div class="credits">
             <!--
-              All the links in the footer should remain intact.
+              All the links in the footer should remain intact. 
               You can delete the links only if you purchased the pro version.
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Squadfree
             -->
-            Designed by <a href="https://bootstrapmade.com/"> BootstrapMade </a>
+            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
           </div>
         </div>
       </div>
