Bootstrap Based Website

--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
               <div class="section-heading">
                 <h2>About TitanNotes</h2>
                 <i class="fa fa-2x fa-angle-down"></i>
-
+                <div>
+                  <img src="img/AboutTitanNotes-01.png" alt=""  />
+                </div>
               </div>
             </div>
           </div>
@@ -374,6 +376,7 @@
                               <!--<i class="fa fa-apple"></i>-->
                             </a>
                           </div>
+
 
       </address>
 
