--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <ul class="nav navbar-nav">
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#service">Decks</a></li>
+          <li><a href="#service">Notes</a></li>
           <li><a href="#contact">Get</a></li>
           <!--
           <li class="dropdown">
@@ -175,7 +175,7 @@
           <div class="col-lg-8 col-lg-offset-2">
             <div class="wow bounceInDown" data-wow-delay="0.4s">
               <div class="section-heading">
-                <h2>Decks</h2>
+                <h2>Notes</h2>
                 <i class="fa fa-2x fa-angle-down"></i>
 
               </div>
