--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#service">Notes</a></li>
           <li><a href="#contact">Get</a></li>
+          <li><a href="titan.html" target="_blank">Sign In</a></li>
           <!--
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
@@ -376,6 +377,7 @@
                               <!--<i class="fa fa-apple"></i>-->
                             </a>
                           </div>
+                      
 
 
       </address>
